--- a/Liventer/src/components/HeroSection/HeroSection.css
+++ b/Liventer/src/components/HeroSection/HeroSection.css
@@ -1,4 +1,6 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 .hero {
     box-sizing: border-box;
     position: relative;
@@ -33,6 +35,7 @@
     font-family: 'Roboto', sans-serif;
     font-weight: 800;
     font-size: 400%;
+    letter-spacing: 4px;
 }
 
 .hero-button {
@@ -96,8 +99,8 @@
     }
   
     .hero-button {
-      width: 80%;
-      max-width: 80%;
+      width: 60%;
+      max-width: 200px;
       height: auto;
       text-align: center;
     }
