--- a/Liventer/src/Styles/index.css
+++ b/Liventer/src/Styles/index.css
@@ -5,9 +5,22 @@ html {
     height: 100%;
   }
   
-  body {
-    padding: 0;
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-  }
+* {
+  padding: 0;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
+}
 
+/* FADE EFFECT START*/
+.fade-zoom-in {
+  opacity: 0;
+  transform: scale(0.5);
+  transition: opacity 1s, transform 1s;
+}
+
+.fade-zoom-in.animate {
+  opacity: 1;
+  transform: scale(1);
+}
+/* FADE EFFECT END*/
