--- a/Liventer/src/pages/Haat.css
+++ b/Liventer/src/pages/Haat.css
@@ -1,8 +1,8 @@
 /* body {
     font-family: Arial, sans-serif;
     background-color: #d4d2d2;
-  }
-.info-text{
+  } */
+/*.info-text{
     float: right;
     padding-left: 3rem;
 }
@@ -27,6 +27,7 @@ img {
 } */
 
 .haat-container {
+    background-color: #fff;
     display: flex;
     padding: 10px;
   }
