--- a/Liventer/src/components/Navbar/Navbar.css
+++ b/Liventer/src/components/Navbar/Navbar.css
@@ -5,6 +5,11 @@
     justify-content: space-between;
     align-items: center;
     padding: 0.5rem 1rem;
+
+    position: fixed; /* pitää navbar ylhäällä scrollatessa */
+    top: 0;
+    z-index: 2;
+    width: 100%;
 }
 
 .navbar-brand img {
