--- a/Liventer/src/pages/Pages.css
+++ b/Liventer/src/pages/Pages.css
@@ -3,6 +3,7 @@
  .ohjelma-container {
     background-color: #fff;
     display: flex;
+    margin-top: 60px;
     padding: 10px;
   }
   
@@ -20,6 +21,7 @@
     flex: 3;
     padding: 10px;
     margin-right: 30%;
+    min-height: 70vh;
   }
   
   @media screen and (max-width: 600px) {
