--- a/Liventer/src/components/GallerySection/gallerySection.css
+++ b/Liventer/src/components/GallerySection/gallerySection.css
@@ -1,9 +1,9 @@
 .gallerySection {
      width: 100%;
-     height: 600px;
+     height: 400px;
      background-color: #212121;
      scroll-behavior: smooth;
-     padding: 70px 0;
+     padding: 5px 0;
      overflow: hidden;
 }
 
@@ -75,3 +75,24 @@
      background-color: rgba(0, 0, 0, 0.5);
      transition: all .3s linear;
 }
+
+@media screen and (max-width: 991px) {
+     .gallerySection {
+          padding: 0;
+          overflow: hidden;
+     }
+
+     .gallerySliderSection img {
+          height: 95%;
+          margin: 0 5px;
+     }
+
+     .gallerySectionBtn button {
+          font-size: 1.5em;
+          padding: 15px 40px;
+          border-radius: 20px;
+          border: 3px solid #d4d4d4;
+          background-color: rgba(0, 0, 0, 0.8);
+          color: #d4d4d4;
+     }
+ }
