--- a/Liventer/src/components/ContactsSection/Contacts.css
+++ b/Liventer/src/components/ContactsSection/Contacts.css
@@ -5,13 +5,14 @@
     gap: 20px;
     padding: 20px;
     overflow: hidden;
+    flex-wrap: wrap; 
 }
 
 .contact {
     background-color: #f4f4f4;
     border-radius: 8px;
     padding: 20px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 4px 6px rgba(126, 126, 126, 0.1);
     text-align: center;
     width: 300px;
 }
@@ -29,4 +30,15 @@
 .contact p {
     margin: 5px 0;
     font-size: 16px;
+}
+
+@media (max-width: 992px) {
+    .contacts-container {
+        flex-direction: column; 
+        align-items: center; 
+    }
+
+    .contact {
+        margin-bottom: 20px; 
+    }
 }
