--- a/Liventer/src/Styles/galleryPage.css
+++ b/Liventer/src/Styles/galleryPage.css
@@ -17,7 +17,6 @@
    
    .galleryWrap {
      width: 100%;
-     height: 100%;
      padding: 10px 0;
      display: flex;
      flex-wrap: wrap;
@@ -27,7 +26,8 @@
    }
    
    .galleryWrap a {
-     width: 200px;
+     height: 200px;
+     max-width: 250px;
      display: flex;
      justify-content: center;
      align-items: center;
@@ -87,12 +87,16 @@
    }
    
    @media screen and (max-width: 1024px) {
-     .galleryWrap a {
-       width: 150px;
-     }
+    .galleryWrap a {
+      height: 200px;
+      max-width: 250px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
    
      .galleryWrap {
-       justify-content: center;
+       justify-content: start;
        gap: 5px;
      }
    } 
@@ -104,7 +108,7 @@
      }
    
      .galleryWrap a {
-       width: 100px;
+       width: 200px;
      }
    
      .galleryPage {
