--- a/Liventer/src/components/Navbar/Navbar.css
+++ b/Liventer/src/components/Navbar/Navbar.css
@@ -50,14 +50,43 @@
     font-size: 1.1em;
 }
 
+.nav-manage {
+    display: none;
+}
+
 @media screen and (max-width: 1150px) {
     .navbar .nav-list {
-        display: none;
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+        padding: 100px 0;
+
+        background-color: #131313;
+
+        align-items: center;
+        justify-content: center;
+
+        position: absolute;
+        z-index: -2;
+        top: 0;
+        left: 0;
+        right: 0;
+    }
+
+    .navbar .nav-list li, .navbar .nav-list button {
+        margin: 20px 0;
     }
 
     .navbar .logo img {
         width: 300px;
     }
     
+    .nav-manage {
+        display: flex;
+        .icon {
+            color: #fff;
+            font-size: 2em;
+        }
+    }
 
 }
