--- a/Liventer/src/components/ServicesSection/Services.css
+++ b/Liventer/src/components/ServicesSection/Services.css
@@ -1,18 +1,23 @@
 .services-container {
-    padding: 5%;
+    padding: 150px 0;
+    width: 100%;
     color: antiquewhite;
     background-color: #050101;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .service-card {
+    padding: 10px;
     width: 250px;
     height: 300px;
     margin: 10px;
     text-align: center;
     font-size: 1.5rem;
+    border: 1px solid #6d6d6d;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 
@@ -21,15 +26,25 @@
     color: inherit;
 }
 
+.service-card h5 {
+    height: 30%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .service-card img {
     width: 100%;
-    height: 60%;
+    height: 70%;
+    object-fit: cover;
+    border-radius: 10px;
 }
 
 
 @media screen and (max-width: 600px) {
     .service-card {
-        width: 80%;
-        height: auto;
+        width: 200px;
+        height: 250px;
     }
 }
