--- a/Liventer/src/Styles/index.css
+++ b/Liventer/src/Styles/index.css
@@ -4,6 +4,10 @@ html {
     background-color: #000000;
     height: 100%;
   }
+
+.main {
+  padding-top: 50px;
+}
   
 * {
   padding: 0;
@@ -23,4 +27,9 @@ html {
   opacity: 1;
   transform: scale(1);
 }
-/* FADE EFFECT END*/
+
+@media screen and (max-width: 800px) {
+  .main {
+    padding-top: 20px;
+  }
+}
