--- a/Liventer/src/Styles/index.css
+++ b/Liventer/src/Styles/index.css
@@ -1,19 +1,21 @@
 /* Yleinen */
 
 html {
-    background-color: #000000;
-    height: 100%;
-  }
+  background-color: #000000;
+  height: 100%;
+}
 
 .main {
   padding-top: 50px;
 }
-  
+
 * {
   padding: 0;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
+  overflow-x: hidden;
+
 }
 
 /* FADE EFFECT START*/
