--- a/Liventer/src/components/Navbar/Navbar.css
+++ b/Liventer/src/components/Navbar/Navbar.css
@@ -7,7 +7,7 @@
 
     position: fixed;
     top: 0;
-    z-index: 2;
+    z-index: 10;
     background-color: #131313;
 }
 
@@ -74,7 +74,7 @@
         justify-content: center;
 
         position: absolute;
-        z-index: -2;
+        z-index: -1;
         top: 0;
         left: 0;
         right: 0;
@@ -94,6 +94,7 @@
             color: #fff;
             font-size: 2em;
         }
+        cursor: pointer;
     }
 
 }
