--- a/Liventer/src/components/Navbar/Navbar.css
+++ b/Liventer/src/components/Navbar/Navbar.css
@@ -86,7 +86,8 @@
     }
 
     .navbar .logo img {
-        width: 300px;
+        width: auto;
+        height: 100px;
     }
     
     .nav-manage {
